# MyVertexModel

./: .gitignore  COPYRIGHT  CYTOKINESIS_IMPLEMENTATION_SUMMARY.md  README.md  design_vertex_model.md  environment.yml  plan-cytokinesisCellDivision.prompt.md  plan-vertexMergingAndMeshing.prompt.md  pyproject.toml
docs/: ACAM_CONVERSION_GUIDE.md  CYTOKINESIS_GUIDE.md  DESIGN_VERTEX_MODEL.md
examples/: demonstrate_cytokinesis.py  diagnose_tissue.py  plot_example.py  prebuild_tissues.py  simulate_cell_apoptosis.py  simulate_cell_growth.py  simulate_grid.py
scripts/: build_honeycomb_tissues.py  convert_acam_tissue.py  tissue_acam_to_vertex.py
src/myvertexmodel/: __init__.py  __main__.py  acam_importer.py  apoptosis.py  builders.py  core.py  cytokinesis.py  energy.py  geometry.py  io.py  mesh_ops.py  plotting.py  simulation.py
tests/: test_apoptosis.py  test_apoptosis_integration_shrink.py  test_apoptosis_simulation.py  test_basic.py  test_cytokinesis.py  test_overdamped_force_balance.py  test_tissue_cell_by_cell.py  test_tissue_structure.py  test_vertex_merging_meshing.py
tools/: defs_mcp_server.py
