[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myvertexmodel"
version = "0.1.0"
description = "A 2D vertex model for epithelial tissue mechanics"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "shapely",
    "matplotlib",
    "scipy",
    "dill",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

